--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
       </div>
     </section>
-
+<!-- test changes -->
     <section id="services" class="services">
       <div class="container">
         <div class="section-title">
